frontend/src/components/Scratch/ScratchToolbar.module.scss
.toolbar {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    justify-content: space-between;

    width: 100%;
}

.right {
    display: flex;
    flex-direction: row;
    align-items: center;

    gap: 8px;

    flex-shrink: 0;
}

.grow {
    flex: 1;
}

.name {
    padding: 4px;

    border: 0;
    background: transparent;
    outline: none !important;

    color: var(--g2000);

    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;

    text-align: center;

    &.editable {
        cursor: text;
    }

    &[contenteditable] {
        text-overflow: initial;
    }

    &.editable:hover,
    &[contenteditable] {
        background: var(--g200);
    }
}

.breadcrumbs {
    padding: 0 8px;

    display: flex;
    align-items: center;

    // Hide owner on small widths
    @media (max-width: 800px) {
        li::before,
        li:not(:last-child) {
            display: none !important;
        }
    }
}

.actions {
    list-style: none;

    padding: 0 4px;

    font-size: 12px;

    background: var(--g300);

    display: flex;
    align-items: center;

    > li {
        display: inline-block;

        color: var(--g1600);
        cursor: pointer;

        &:hover {
            color: var(--g2000);
        }

        &.separator {
            width: 1px;
            height: 16px;
            margin: 0 4px;

            background: var(--g500);
        }

        button {
            display: flex;
            align-items: center;
            gap: 4px;
            padding: 8px;

            cursor: pointer;

            background: none;
            border: 0;

            &[disabled] {
                opacity: 0.5;
                cursor: default;
            }

            svg {
                width: 1em;
            }

            // On small widths, only show the icon
            @media (max-width: 600px) {
                text-indent: -9999px; // Hide text
                padding: 6px 2px;

                svg {
                    width: 1.5em;
                }
            }
        }
    }
}

